// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@nx/storybook:configuration for Storybook v7 basic functionalities should generate TS config for project if tsConfiguration true 1`] = `
"import type { StorybookConfig } from '@storybook/angular';

const config: StorybookConfig = {
  stories: ['../**/*.stories.@(js|jsx|ts|tsx|mdx)'],
  addons: ['@storybook/addon-essentials'],
  framework: {
    name: '@storybook/angular',
    options: {},
  },
};

export default config;

// To customize your webpack configuration you can use the webpackFinal field.
// Check https://storybook.js.org/docs/react/builders/webpack#extending-storybooks-webpack-config
// and https://nx.dev/packages/storybook/documents/custom-builder-configs
"
`;

exports[`@nx/storybook:configuration for Storybook v7 basic functionalities should generate TypeScript Configuration files 1`] = `
{
  "$schema": "../../node_modules/nx/schemas/project-schema.json",
  "name": "test-ui-lib",
  "projectType": "library",
  "root": "libs/test-ui-lib",
  "sourceRoot": "libs/test-ui-lib/src",
  "tags": [],
  "targets": {
    "build-storybook": {
      "configurations": {
        "ci": {
          "quiet": true,
        },
      },
      "executor": "@storybook/angular:build-storybook",
      "options": {
        "browserTarget": "test-ui-lib:build-storybook",
        "compodoc": false,
        "configDir": "libs/test-ui-lib/.storybook",
        "outputDir": "dist/storybook/test-ui-lib",
      },
      "outputs": [
        "{options.outputDir}",
      ],
    },
    "lint": {
      "executor": "@nx/linter:eslint",
      "options": {
        "lintFilePatterns": [
          "libs/test-ui-lib/**/*.ts",
        ],
      },
      "outputs": [
        "{options.outputFile}",
      ],
    },
    "storybook": {
      "configurations": {
        "ci": {
          "quiet": true,
        },
      },
      "executor": "@storybook/angular:start-storybook",
      "options": {
        "browserTarget": "test-ui-lib:build-storybook",
        "compodoc": false,
        "configDir": "libs/test-ui-lib/.storybook",
        "port": 4400,
      },
    },
    "test": {
      "configurations": {
        "ci": {
          "ci": true,
          "codeCoverage": true,
        },
      },
      "executor": "@nx/jest:jest",
      "options": {
        "jestConfig": "libs/test-ui-lib/jest.config.ts",
        "passWithNoTests": true,
      },
      "outputs": [
        "{workspaceRoot}/coverage/{projectRoot}",
      ],
    },
  },
}
`;

exports[`@nx/storybook:configuration for Storybook v7 basic functionalities should generate TypeScript Configuration files 2`] = `null`;

exports[`@nx/storybook:configuration for Storybook v7 basic functionalities should generate TypeScript Configuration files 3`] = `
"import type { StorybookConfig } from '@storybook/angular';

const config: StorybookConfig = {
  stories: ['../**/*.stories.@(js|jsx|ts|tsx|mdx)'],
  addons: ['@storybook/addon-essentials'],
  framework: {
    name: '@storybook/angular',
    options: {},
  },
};

export default config;

// To customize your webpack configuration you can use the webpackFinal field.
// Check https://storybook.js.org/docs/react/builders/webpack#extending-storybooks-webpack-config
// and https://nx.dev/packages/storybook/documents/custom-builder-configs
"
`;

exports[`@nx/storybook:configuration for Storybook v7 basic functionalities should have the proper typings 1`] = `
"{
  "extends": "./tsconfig.json",
  "compilerOptions": {
    "emitDecoratorMetadata": true,
    "outDir": ""
  },
  "files": [
    "../../node_modules/@nx/react/typings/styled-jsx.d.ts",
    "../../node_modules/@nx/react/typings/cssmodule.d.ts",
    "../../node_modules/@nx/react/typings/image.d.ts"
  ],
  "exclude": [
    "src/**/*.spec.ts",
    "src/**/*.test.ts",
    "src/**/*.spec.js",
    "src/**/*.test.js",
    "src/**/*.spec.tsx",
    "src/**/*.test.tsx",
    "src/**/*.spec.jsx",
    "src/**/*.test.js"
  ],
  "include": [
    "src/**/*.stories.ts",
    "src/**/*.stories.js",
    "src/**/*.stories.jsx",
    "src/**/*.stories.tsx",
    "src/**/*.stories.mdx",
    ".storybook/*.js",
    ".storybook/*.ts"
  ]
}
"
`;

exports[`@nx/storybook:configuration for Storybook v7 generate Storybook configuration for all types of projects should contain the correct configuration in "apps/main-vite/.storybook/" 1`] = `
"const config = {
  stories: ['../src/app/**/*.stories.@(js|jsx|ts|tsx|mdx)'],
  addons: ['@storybook/addon-essentials'],
  framework: {
    name: '@storybook/react-vite',
    options: {
      builder: {
        viteConfigPath: 'apps/main-vite/vite.config.ts',
      },
    },
  },
};

export default config;

// To customize your Vite configuration you can use the viteFinal field.
// Check https://storybook.js.org/docs/react/builders/vite#configuration
// and https://nx.dev/packages/storybook/documents/custom-builder-configs
"
`;

exports[`@nx/storybook:configuration for Storybook v7 generate Storybook configuration for all types of projects should contain the correct configuration in "apps/main-vite/.storybook/" 2`] = `null`;

exports[`@nx/storybook:configuration for Storybook v7 generate Storybook configuration for all types of projects should contain the correct configuration in "apps/main-vite-ts/.storybook/" 1`] = `
"import type { StorybookConfig } from '@storybook/react-vite';

const config: StorybookConfig = {
  stories: ['../src/app/**/*.stories.@(js|jsx|ts|tsx|mdx)'],
  addons: ['@storybook/addon-essentials'],
  framework: {
    name: '@storybook/react-vite',
    options: {
      builder: {
        viteConfigPath: 'apps/main-vite-ts/vite.config.custom.ts',
      },
    },
  },
};

export default config;

// To customize your Vite configuration you can use the viteFinal field.
// Check https://storybook.js.org/docs/react/builders/vite#configuration
// and https://nx.dev/packages/storybook/documents/custom-builder-configs
"
`;

exports[`@nx/storybook:configuration for Storybook v7 generate Storybook configuration for all types of projects should contain the correct configuration in "apps/main-vite-ts/.storybook/" 2`] = `null`;

exports[`@nx/storybook:configuration for Storybook v7 generate Storybook configuration for all types of projects should contain the correct configuration in "apps/main-webpack/.storybook/" 1`] = `
"const config = {
  stories: ['../src/app/**/*.stories.@(js|jsx|ts|tsx|mdx)'],
  addons: ['@storybook/addon-essentials', '@nx/react/plugins/storybook'],
  framework: {
    name: '@storybook/react-webpack5',
    options: {},
  },
};

export default config;

// To customize your webpack configuration you can use the webpackFinal field.
// Check https://storybook.js.org/docs/react/builders/webpack#extending-storybooks-webpack-config
// and https://nx.dev/packages/storybook/documents/custom-builder-configs
"
`;

exports[`@nx/storybook:configuration for Storybook v7 generate Storybook configuration for all types of projects should contain the correct configuration in "apps/main-webpack/.storybook/" 2`] = `null`;

exports[`@nx/storybook:configuration for Storybook v7 generate Storybook configuration for all types of projects should contain the correct configuration in "apps/nextapp/.storybook/" 1`] = `
"const config = {
  stories: ['../components/**/*.stories.@(js|jsx|ts|tsx|mdx)'],
  addons: ['@storybook/addon-essentials'],
  framework: {
    name: '@storybook/nextjs',
    options: {},
  },
};

export default config;

// To customize your webpack configuration you can use the webpackFinal field.
// Check https://storybook.js.org/docs/react/builders/webpack#extending-storybooks-webpack-config
// and https://nx.dev/packages/storybook/documents/custom-builder-configs
"
`;

exports[`@nx/storybook:configuration for Storybook v7 generate Storybook configuration for all types of projects should contain the correct configuration in "apps/nextapp/.storybook/" 2`] = `null`;

exports[`@nx/storybook:configuration for Storybook v7 generate Storybook configuration for all types of projects should contain the correct configuration in "apps/react-swc/.storybook/" 1`] = `
"const config = {
  stories: ['../src/app/**/*.stories.@(js|jsx|ts|tsx|mdx)'],
  addons: ['@storybook/addon-essentials', '@nx/react/plugins/storybook'],
  framework: {
    name: '@storybook/react-webpack5',
    options: {},
  },
};

export default config;

// To customize your webpack configuration you can use the webpackFinal field.
// Check https://storybook.js.org/docs/react/builders/webpack#extending-storybooks-webpack-config
// and https://nx.dev/packages/storybook/documents/custom-builder-configs
"
`;

exports[`@nx/storybook:configuration for Storybook v7 generate Storybook configuration for all types of projects should contain the correct configuration in "apps/react-swc/.storybook/" 2`] = `null`;

exports[`@nx/storybook:configuration for Storybook v7 generate Storybook configuration for all types of projects should contain the correct configuration in "apps/reapp/.storybook/" 1`] = `
"const config = {
  stories: ['../src/app/**/*.stories.@(js|jsx|ts|tsx|mdx)'],
  addons: ['@storybook/addon-essentials'],
  framework: {
    name: '@storybook/react-vite',
    options: {
      builder: {
        viteConfigPath: 'apps/reapp/vite.config.ts',
      },
    },
  },
};

export default config;

// To customize your Vite configuration you can use the viteFinal field.
// Check https://storybook.js.org/docs/react/builders/vite#configuration
// and https://nx.dev/packages/storybook/documents/custom-builder-configs
"
`;

exports[`@nx/storybook:configuration for Storybook v7 generate Storybook configuration for all types of projects should contain the correct configuration in "apps/reapp/.storybook/" 2`] = `null`;

exports[`@nx/storybook:configuration for Storybook v7 generate Storybook configuration for all types of projects should contain the correct configuration in "apps/reappw/.storybook/" 1`] = `
"const config = {
  stories: ['../src/app/**/*.stories.@(js|jsx|ts|tsx|mdx)'],
  addons: ['@storybook/addon-essentials', '@nx/react/plugins/storybook'],
  framework: {
    name: '@storybook/react-webpack5',
    options: {},
  },
};

export default config;

// To customize your webpack configuration you can use the webpackFinal field.
// Check https://storybook.js.org/docs/react/builders/webpack#extending-storybooks-webpack-config
// and https://nx.dev/packages/storybook/documents/custom-builder-configs
"
`;

exports[`@nx/storybook:configuration for Storybook v7 generate Storybook configuration for all types of projects should contain the correct configuration in "apps/reappw/.storybook/" 2`] = `null`;

exports[`@nx/storybook:configuration for Storybook v7 generate Storybook configuration for all types of projects should contain the correct configuration in "apps/wv1/.storybook/" 1`] = `
"const config = {
  stories: ['../src/app/**/*.stories.@(js|jsx|ts|tsx|mdx)'],
  addons: ['@storybook/addon-essentials'],
  framework: {
    name: '@storybook/web-components-vite',
    options: {
      builder: {
        viteConfigPath: 'apps/wv1/vite.config.custom.ts',
      },
    },
  },
};

export default config;

// To customize your Vite configuration you can use the viteFinal field.
// Check https://storybook.js.org/docs/react/builders/vite#configuration
// and https://nx.dev/packages/storybook/documents/custom-builder-configs
"
`;

exports[`@nx/storybook:configuration for Storybook v7 generate Storybook configuration for all types of projects should contain the correct configuration in "apps/wv1/.storybook/" 2`] = `null`;

exports[`@nx/storybook:configuration for Storybook v7 generate Storybook configuration for all types of projects should contain the correct configuration in "apps/ww1/.storybook/" 1`] = `
"const config = {
  stories: ['../src/app/**/*.stories.@(js|jsx|ts|tsx|mdx)'],
  addons: ['@storybook/addon-essentials'],
  framework: {
    name: '@storybook/web-components-webpack5',
    options: {},
  },
};

export default config;

// To customize your webpack configuration you can use the webpackFinal field.
// Check https://storybook.js.org/docs/react/builders/webpack#extending-storybooks-webpack-config
// and https://nx.dev/packages/storybook/documents/custom-builder-configs
"
`;

exports[`@nx/storybook:configuration for Storybook v7 generate Storybook configuration for all types of projects should contain the correct configuration in "apps/ww1/.storybook/" 2`] = `null`;

exports[`@nx/storybook:configuration for Storybook v7 generate Storybook configuration for all types of projects should contain the correct configuration in "libs/react-rollup/.storybook/" 1`] = `
"const config = {
  stories: ['../src/lib/**/*.stories.@(js|jsx|ts|tsx|mdx)'],
  addons: ['@storybook/addon-essentials', '@nx/react/plugins/storybook'],
  framework: {
    name: '@storybook/react-webpack5',
    options: {},
  },
};

export default config;

// To customize your webpack configuration you can use the webpackFinal field.
// Check https://storybook.js.org/docs/react/builders/webpack#extending-storybooks-webpack-config
// and https://nx.dev/packages/storybook/documents/custom-builder-configs
"
`;

exports[`@nx/storybook:configuration for Storybook v7 generate Storybook configuration for all types of projects should contain the correct configuration in "libs/react-rollup/.storybook/" 2`] = `null`;

exports[`@nx/storybook:configuration for Storybook v7 generate Storybook configuration for all types of projects should contain the correct configuration in "libs/react-vite/.storybook/" 1`] = `
"const config = {
  stories: ['../src/lib/**/*.stories.@(js|jsx|ts|tsx|mdx)'],
  addons: ['@storybook/addon-essentials'],
  framework: {
    name: '@storybook/react-vite',
    options: {
      builder: {
        viteConfigPath: 'libs/react-vite/vite.config.ts',
      },
    },
  },
};

export default config;

// To customize your Vite configuration you can use the viteFinal field.
// Check https://storybook.js.org/docs/react/builders/vite#configuration
// and https://nx.dev/packages/storybook/documents/custom-builder-configs
"
`;

exports[`@nx/storybook:configuration for Storybook v7 generate Storybook configuration for all types of projects should contain the correct configuration in "libs/react-vite/.storybook/" 2`] = `null`;

exports[`@nx/storybook:configuration for Storybook v7 generate Storybook configuration for all types of projects should have updated all their target configurations correctly 1`] = `
Map {
  "main-vite" => {
    "$schema": "../../node_modules/nx/schemas/project-schema.json",
    "name": "main-vite",
    "projectType": "application",
    "root": "apps/main-vite",
    "sourceRoot": "apps/main-vite/src",
    "tags": [],
    "targets": {
      "build": {
        "configurations": {
          "development": {
            "mode": "development",
          },
          "production": {
            "mode": "production",
          },
        },
        "defaultConfiguration": "production",
        "executor": "@nx/vite:build",
        "options": {
          "configFile": "apps/main-vite/vite.config.ts",
          "outputPath": "dist/apps/main-vite",
        },
        "outputs": [
          "{options.outputPath}",
        ],
      },
      "build-storybook": {
        "configurations": {
          "ci": {
            "quiet": true,
          },
        },
        "executor": "@nx/storybook:build",
        "options": {
          "configDir": "apps/main-vite/.storybook",
          "outputDir": "dist/storybook/main-vite",
        },
        "outputs": [
          "{options.outputDir}",
        ],
      },
      "lint": {
        "executor": "@nx/linter:eslint",
        "options": {
          "lintFilePatterns": [
            "apps/main-vite/**/*.{ts,tsx,js,jsx}",
          ],
        },
        "outputs": [
          "{options.outputFile}",
        ],
      },
      "serve": {
        "configurations": {
          "development": {
            "buildTarget": "main-vite:build:development",
            "hmr": true,
          },
          "production": {
            "buildTarget": "main-vite:build:production",
            "hmr": false,
          },
        },
        "defaultConfiguration": "development",
        "executor": "@nx/vite:dev-server",
        "options": {
          "buildTarget": "main-vite:build",
        },
      },
      "storybook": {
        "configurations": {
          "ci": {
            "quiet": true,
          },
        },
        "executor": "@nx/storybook:storybook",
        "options": {
          "configDir": "apps/main-vite/.storybook",
          "port": 4400,
        },
      },
      "test": {
        "executor": "@nx/vite:test",
        "options": {
          "passWithNoTests": true,
          "reportsDirectory": "../../coverage/apps/main-vite",
        },
        "outputs": [
          "coverage/apps/main-vite",
        ],
      },
    },
  },
  "main-vite-e2e" => {
    "$schema": "../../node_modules/nx/schemas/project-schema.json",
    "implicitDependencies": [
      "main-vite",
    ],
    "name": "main-vite-e2e",
    "projectType": "application",
    "root": "apps/main-vite-e2e",
    "sourceRoot": "apps/main-vite-e2e/src",
    "tags": [],
    "targets": {
      "e2e": {
        "configurations": {
          "production": {
            "devServerTarget": "main-vite:serve:production",
          },
        },
        "executor": "@nx/cypress:cypress",
        "options": {
          "cypressConfig": "apps/main-vite-e2e/cypress.config.ts",
          "devServerTarget": "main-vite:serve:development",
          "testingType": "e2e",
        },
      },
      "lint": {
        "executor": "@nx/linter:eslint",
        "options": {
          "lintFilePatterns": [
            "apps/main-vite-e2e/**/*.{js,ts}",
          ],
        },
        "outputs": [
          "{options.outputFile}",
        ],
      },
    },
  },
  "main-vite-ts" => {
    "$schema": "../../node_modules/nx/schemas/project-schema.json",
    "name": "main-vite-ts",
    "projectType": "application",
    "root": "apps/main-vite-ts",
    "sourceRoot": "apps/main-vite-ts/src",
    "tags": [],
    "targets": {
      "build": {
        "configurations": {
          "development": {
            "mode": "development",
          },
          "production": {
            "mode": "production",
          },
        },
        "defaultConfiguration": "production",
        "executor": "@nx/vite:build",
        "options": {
          "configFile": "apps/main-vite-ts/vite.config.custom.ts",
          "outputPath": "dist/apps/main-vite-ts",
        },
        "outputs": [
          "{options.outputPath}",
        ],
      },
      "build-storybook": {
        "configurations": {
          "ci": {
            "quiet": true,
          },
        },
        "executor": "@nx/storybook:build",
        "options": {
          "configDir": "apps/main-vite-ts/.storybook",
          "outputDir": "dist/storybook/main-vite-ts",
        },
        "outputs": [
          "{options.outputDir}",
        ],
      },
      "lint": {
        "executor": "@nx/linter:eslint",
        "options": {
          "lintFilePatterns": [
            "apps/main-vite-ts/**/*.{ts,tsx,js,jsx}",
          ],
        },
        "outputs": [
          "{options.outputFile}",
        ],
      },
      "serve": {
        "configurations": {
          "development": {
            "buildTarget": "main-vite-ts:build:development",
            "hmr": true,
          },
          "production": {
            "buildTarget": "main-vite-ts:build:production",
            "hmr": false,
          },
        },
        "defaultConfiguration": "development",
        "executor": "@nx/vite:dev-server",
        "options": {
          "buildTarget": "main-vite-ts:build",
        },
      },
      "storybook": {
        "configurations": {
          "ci": {
            "quiet": true,
          },
        },
        "executor": "@nx/storybook:storybook",
        "options": {
          "configDir": "apps/main-vite-ts/.storybook",
          "port": 4400,
        },
      },
      "test": {
        "executor": "@nx/vite:test",
        "options": {
          "passWithNoTests": true,
          "reportsDirectory": "../../coverage/apps/main-vite-ts",
        },
        "outputs": [
          "coverage/apps/main-vite-ts",
        ],
      },
    },
  },
  "main-vite-ts-e2e" => {
    "$schema": "../../node_modules/nx/schemas/project-schema.json",
    "implicitDependencies": [
      "main-vite-ts",
    ],
    "name": "main-vite-ts-e2e",
    "projectType": "application",
    "root": "apps/main-vite-ts-e2e",
    "sourceRoot": "apps/main-vite-ts-e2e/src",
    "tags": [],
    "targets": {
      "e2e": {
        "configurations": {
          "production": {
            "devServerTarget": "main-vite-ts:serve:production",
          },
        },
        "executor": "@nx/cypress:cypress",
        "options": {
          "cypressConfig": "apps/main-vite-ts-e2e/cypress.config.ts",
          "devServerTarget": "main-vite-ts:serve:development",
          "testingType": "e2e",
        },
      },
      "lint": {
        "executor": "@nx/linter:eslint",
        "options": {
          "lintFilePatterns": [
            "apps/main-vite-ts-e2e/**/*.{js,ts}",
          ],
        },
        "outputs": [
          "{options.outputFile}",
        ],
      },
    },
  },
  "main-webpack" => {
    "$schema": "../../node_modules/nx/schemas/project-schema.json",
    "name": "main-webpack",
    "projectType": "application",
    "root": "apps/main-webpack",
    "sourceRoot": "apps/main-webpack/src",
    "tags": [],
    "targets": {
      "build": {
        "configurations": {
          "development": {
            "extractLicenses": false,
            "optimization": false,
            "sourceMap": true,
            "vendorChunk": true,
          },
          "production": {
            "extractLicenses": true,
            "fileReplacements": [
              {
                "replace": "apps/main-webpack/src/environments/environment.ts",
                "with": "apps/main-webpack/src/environments/environment.prod.ts",
              },
            ],
            "namedChunks": false,
            "optimization": true,
            "outputHashing": "all",
            "sourceMap": false,
            "vendorChunk": false,
          },
        },
        "defaultConfiguration": "production",
        "executor": "@nx/webpack:webpack",
        "options": {
          "assets": [
            "apps/main-webpack/src/favicon.ico",
            "apps/main-webpack/src/assets",
          ],
          "baseHref": "/",
          "compiler": "babel",
          "index": "apps/main-webpack/src/index.html",
          "main": "apps/main-webpack/src/main.tsx",
          "outputPath": "dist/apps/main-webpack",
          "polyfills": "apps/main-webpack/src/polyfills.ts",
          "scripts": [],
          "styles": [
            "apps/main-webpack/src/styles.css",
          ],
          "tsConfig": "apps/main-webpack/tsconfig.app.json",
          "webpackConfig": "@nx/react/plugins/webpack",
        },
        "outputs": [
          "{options.outputPath}",
        ],
      },
      "build-storybook": {
        "configurations": {
          "ci": {
            "quiet": true,
          },
        },
        "executor": "@nx/storybook:build",
        "options": {
          "configDir": "apps/main-webpack/.storybook",
          "outputDir": "dist/storybook/main-webpack",
        },
        "outputs": [
          "{options.outputDir}",
        ],
      },
      "lint": {
        "executor": "@nx/linter:eslint",
        "options": {
          "lintFilePatterns": [
            "apps/main-webpack/**/*.{ts,tsx,js,jsx}",
          ],
        },
        "outputs": [
          "{options.outputFile}",
        ],
      },
      "serve": {
        "configurations": {
          "development": {
            "buildTarget": "main-webpack:build:development",
          },
          "production": {
            "buildTarget": "main-webpack:build:production",
            "hmr": false,
          },
        },
        "defaultConfiguration": "development",
        "executor": "@nx/webpack:dev-server",
        "options": {
          "buildTarget": "main-webpack:build",
          "hmr": true,
        },
      },
      "storybook": {
        "configurations": {
          "ci": {
            "quiet": true,
          },
        },
        "executor": "@nx/storybook:storybook",
        "options": {
          "configDir": "apps/main-webpack/.storybook",
          "port": 4400,
        },
      },
      "test": {
        "executor": "@nx/jest:jest",
        "options": {
          "jestConfig": "apps/main-webpack/jest.config.ts",
          "passWithNoTests": true,
        },
        "outputs": [
          "{workspaceRoot}/coverage/{projectRoot}",
        ],
      },
    },
  },
  "main-webpack-e2e" => {
    "$schema": "../../node_modules/nx/schemas/project-schema.json",
    "implicitDependencies": [
      "main-webpack",
    ],
    "name": "main-webpack-e2e",
    "projectType": "application",
    "root": "apps/main-webpack-e2e",
    "sourceRoot": "apps/main-webpack-e2e/src",
    "tags": [],
    "targets": {
      "e2e": {
        "configurations": {
          "production": {
            "devServerTarget": "main-webpack:serve:production",
          },
        },
        "executor": "@nx/cypress:cypress",
        "options": {
          "cypressConfig": "apps/main-webpack-e2e/cypress.config.ts",
          "devServerTarget": "main-webpack:serve:development",
          "testingType": "e2e",
        },
      },
      "lint": {
        "executor": "@nx/linter:eslint",
        "options": {
          "lintFilePatterns": [
            "apps/main-webpack-e2e/**/*.{js,ts}",
          ],
        },
        "outputs": [
          "{options.outputFile}",
        ],
      },
    },
  },
  "my-plugin-e2e" => {
    "$schema": "../../node_modules/nx/schemas/project-schema.json",
    "implicitDependencies": [
      "my-plugin",
    ],
    "name": "my-plugin-e2e",
    "projectType": "application",
    "root": "apps/my-plugin-e2e",
    "sourceRoot": "apps/my-plugin-e2e/src",
    "tags": [],
    "targets": {
      "e2e": {
        "executor": "@nx/plugin:e2e",
        "options": {
          "jestConfig": "apps/my-plugin-e2e/jest.config.ts",
          "target": "my-plugin:build",
        },
      },
    },
  },
  "nextapp" => {
    "$schema": "../../node_modules/nx/schemas/project-schema.json",
    "name": "nextapp",
    "projectType": "application",
    "root": "apps/nextapp",
    "sourceRoot": "apps/nextapp",
    "tags": [],
    "targets": {
      "build": {
        "configurations": {
          "development": {
            "outputPath": "apps/nextapp",
          },
          "production": {},
        },
        "defaultConfiguration": "production",
        "executor": "@nx/next:build",
        "options": {
          "outputPath": "dist/apps/nextapp",
          "root": "apps/nextapp",
        },
        "outputs": [
          "{options.outputPath}",
        ],
      },
      "build-storybook": {
        "configurations": {
          "ci": {
            "quiet": true,
          },
        },
        "executor": "@nx/storybook:build",
        "options": {
          "configDir": "apps/nextapp/.storybook",
          "outputDir": "dist/storybook/nextapp",
        },
        "outputs": [
          "{options.outputDir}",
        ],
      },
      "export": {
        "executor": "@nx/next:export",
        "options": {
          "buildTarget": "nextapp:build:production",
        },
      },
      "lint": {
        "executor": "@nx/linter:eslint",
        "options": {
          "lintFilePatterns": [
            "apps/nextapp/**/*.{ts,tsx,js,jsx}",
          ],
        },
        "outputs": [
          "{options.outputFile}",
        ],
      },
      "serve": {
        "configurations": {
          "development": {
            "buildTarget": "nextapp:build:development",
            "dev": true,
          },
          "production": {
            "buildTarget": "nextapp:build:production",
            "dev": false,
          },
        },
        "defaultConfiguration": "development",
        "executor": "@nx/next:server",
        "options": {
          "buildTarget": "nextapp:build",
          "dev": true,
        },
      },
      "storybook": {
        "configurations": {
          "ci": {
            "quiet": true,
          },
        },
        "executor": "@nx/storybook:storybook",
        "options": {
          "configDir": "apps/nextapp/.storybook",
          "port": 4400,
        },
      },
      "test": {
        "executor": "@nx/jest:jest",
        "options": {
          "jestConfig": "apps/nextapp/jest.config.ts",
          "passWithNoTests": true,
        },
        "outputs": [
          "{workspaceRoot}/coverage/{projectRoot}",
        ],
      },
    },
  },
  "nextapp-e2e" => {
    "$schema": "../../node_modules/nx/schemas/project-schema.json",
    "implicitDependencies": [
      "nextapp",
    ],
    "name": "nextapp-e2e",
    "projectType": "application",
    "root": "apps/nextapp-e2e",
    "sourceRoot": "apps/nextapp-e2e/src",
    "tags": [],
    "targets": {
      "e2e": {
        "configurations": {
          "production": {
            "devServerTarget": "nextapp:serve:production",
          },
        },
        "executor": "@nx/cypress:cypress",
        "options": {
          "cypressConfig": "apps/nextapp-e2e/cypress.config.ts",
          "devServerTarget": "nextapp:serve:development",
          "testingType": "e2e",
        },
      },
      "lint": {
        "executor": "@nx/linter:eslint",
        "options": {
          "lintFilePatterns": [
            "apps/nextapp-e2e/**/*.{js,ts}",
          ],
        },
        "outputs": [
          "{options.outputFile}",
        ],
      },
    },
  },
  "ngapp" => {
    "$schema": "../../node_modules/nx/schemas/project-schema.json",
    "name": "ngapp",
    "prefix": "imported-libs",
    "projectType": "application",
    "root": "apps/ngapp",
    "sourceRoot": "apps/ngapp/src",
    "tags": [],
    "targets": {
      "build": {
        "configurations": {
          "development": {
            "buildOptimizer": false,
            "extractLicenses": false,
            "namedChunks": true,
            "optimization": false,
            "sourceMap": true,
            "vendorChunk": true,
          },
          "production": {
            "budgets": [
              {
                "maximumError": "1mb",
                "maximumWarning": "500kb",
                "type": "initial",
              },
              {
                "maximumError": "4kb",
                "maximumWarning": "2kb",
                "type": "anyComponentStyle",
              },
            ],
            "outputHashing": "all",
          },
        },
        "defaultConfiguration": "production",
        "executor": "@angular-devkit/build-angular:browser",
        "options": {
          "assets": [
            "apps/ngapp/src/favicon.ico",
            "apps/ngapp/src/assets",
          ],
          "index": "apps/ngapp/src/index.html",
          "main": "apps/ngapp/src/main.ts",
          "outputPath": "dist/apps/ngapp",
          "polyfills": [
            "zone.js",
          ],
          "scripts": [],
          "styles": [
            "apps/ngapp/src/styles.css",
          ],
          "tsConfig": "apps/ngapp/tsconfig.app.json",
        },
        "outputs": [
          "{options.outputPath}",
        ],
      },
      "build-storybook": {
        "configurations": {
          "ci": {
            "quiet": true,
          },
        },
        "executor": "@storybook/angular:build-storybook",
        "options": {
          "browserTarget": "ngapp:build",
          "compodoc": false,
          "configDir": "apps/ngapp/.storybook",
          "outputDir": "dist/storybook/ngapp",
        },
        "outputs": [
          "{options.outputDir}",
        ],
      },
      "extract-i18n": {
        "executor": "@angular-devkit/build-angular:extract-i18n",
        "options": {
          "browserTarget": "ngapp:build",
        },
      },
      "lint": {
        "executor": "@nx/linter:eslint",
        "options": {
          "lintFilePatterns": [
            "apps/ngapp/**/*.ts",
            "apps/ngapp/**/*.html",
          ],
        },
        "outputs": [
          "{options.outputFile}",
        ],
      },
      "serve": {
        "configurations": {
          "development": {
            "browserTarget": "ngapp:build:development",
          },
          "production": {
            "browserTarget": "ngapp:build:production",
          },
        },
        "defaultConfiguration": "development",
        "executor": "@angular-devkit/build-angular:dev-server",
      },
      "storybook": {
        "configurations": {
          "ci": {
            "quiet": true,
          },
        },
        "executor": "@storybook/angular:start-storybook",
        "options": {
          "browserTarget": "ngapp:build",
          "compodoc": false,
          "configDir": "apps/ngapp/.storybook",
          "port": 4400,
        },
      },
      "test": {
        "executor": "@nx/jest:jest",
        "options": {
          "jestConfig": "apps/ngapp/jest.config.ts",
          "passWithNoTests": true,
        },
        "outputs": [
          "{workspaceRoot}/coverage/{projectRoot}",
        ],
      },
    },
  },
  "ngapp-e2e" => {
    "$schema": "../../node_modules/nx/schemas/project-schema.json",
    "implicitDependencies": [
      "ngapp",
    ],
    "name": "ngapp-e2e",
    "projectType": "application",
    "root": "apps/ngapp-e2e",
    "sourceRoot": "apps/ngapp-e2e/src",
    "tags": [],
    "targets": {
      "e2e": {
        "configurations": {
          "production": {
            "devServerTarget": "ngapp:serve:production",
          },
        },
        "executor": "@nx/cypress:cypress",
        "options": {
          "cypressConfig": "apps/ngapp-e2e/cypress.config.ts",
          "devServerTarget": "ngapp:serve:development",
          "testingType": "e2e",
        },
      },
      "lint": {
        "executor": "@nx/linter:eslint",
        "options": {
          "lintFilePatterns": [
            "apps/ngapp-e2e/**/*.{js,ts}",
          ],
        },
        "outputs": [
          "{options.outputFile}",
        ],
      },
    },
  },
  "nglib-e2e" => {
    "$schema": "../../node_modules/nx/schemas/project-schema.json",
    "implicitDependencies": [
      "nglib",
    ],
    "name": "nglib-e2e",
    "projectType": "application",
    "root": "apps/nglib-e2e",
    "sourceRoot": "apps/nglib-e2e/src",
    "tags": [],
    "targets": {
      "e2e": {
        "configurations": {
          "ci": {
            "devServerTarget": "nglib:storybook:ci",
          },
        },
        "executor": "@nx/cypress:cypress",
        "options": {
          "cypressConfig": "apps/nglib-e2e/cypress.config.ts",
          "devServerTarget": "nglib:storybook",
          "testingType": "e2e",
        },
      },
      "lint": {
        "executor": "@nx/linter:eslint",
        "options": {
          "lintFilePatterns": [
            "apps/nglib-e2e/**/*.{js,ts}",
          ],
        },
        "outputs": [
          "{options.outputFile}",
        ],
      },
    },
  },
  "react-rollup-e2e" => {
    "$schema": "../../node_modules/nx/schemas/project-schema.json",
    "implicitDependencies": [
      "react-rollup",
    ],
    "name": "react-rollup-e2e",
    "projectType": "application",
    "root": "apps/react-rollup-e2e",
    "sourceRoot": "apps/react-rollup-e2e/src",
    "tags": [],
    "targets": {
      "e2e": {
        "configurations": {
          "ci": {
            "devServerTarget": "react-rollup:storybook:ci",
          },
        },
        "executor": "@nx/cypress:cypress",
        "options": {
          "cypressConfig": "apps/react-rollup-e2e/cypress.config.ts",
          "devServerTarget": "react-rollup:storybook",
          "testingType": "e2e",
        },
      },
      "lint": {
        "executor": "@nx/linter:eslint",
        "options": {
          "lintFilePatterns": [
            "apps/react-rollup-e2e/**/*.{js,ts}",
          ],
        },
        "outputs": [
          "{options.outputFile}",
        ],
      },
    },
  },
  "react-swc" => {
    "$schema": "../../node_modules/nx/schemas/project-schema.json",
    "name": "react-swc",
    "projectType": "application",
    "root": "apps/react-swc",
    "sourceRoot": "apps/react-swc/src",
    "tags": [],
    "targets": {
      "build": {
        "configurations": {
          "development": {
            "extractLicenses": false,
            "optimization": false,
            "sourceMap": true,
            "vendorChunk": true,
          },
          "production": {
            "extractLicenses": true,
            "fileReplacements": [
              {
                "replace": "apps/react-swc/src/environments/environment.ts",
                "with": "apps/react-swc/src/environments/environment.prod.ts",
              },
            ],
            "namedChunks": false,
            "optimization": true,
            "outputHashing": "all",
            "sourceMap": false,
            "vendorChunk": false,
          },
        },
        "defaultConfiguration": "production",
        "executor": "@nx/webpack:webpack",
        "options": {
          "assets": [
            "apps/react-swc/src/favicon.ico",
            "apps/react-swc/src/assets",
          ],
          "baseHref": "/",
          "compiler": "swc",
          "index": "apps/react-swc/src/index.html",
          "main": "apps/react-swc/src/main.tsx",
          "outputPath": "dist/apps/react-swc",
          "scripts": [],
          "styles": [
            "apps/react-swc/src/styles.css",
          ],
          "tsConfig": "apps/react-swc/tsconfig.app.json",
          "webpackConfig": "apps/react-swc/webpack.config.js",
        },
        "outputs": [
          "{options.outputPath}",
        ],
      },
      "build-storybook": {
        "configurations": {
          "ci": {
            "quiet": true,
          },
        },
        "executor": "@nx/storybook:build",
        "options": {
          "configDir": "apps/react-swc/.storybook",
          "outputDir": "dist/storybook/react-swc",
        },
        "outputs": [
          "{options.outputDir}",
        ],
      },
      "lint": {
        "executor": "@nx/linter:eslint",
        "options": {
          "lintFilePatterns": [
            "apps/react-swc/**/*.{ts,tsx,js,jsx}",
          ],
        },
        "outputs": [
          "{options.outputFile}",
        ],
      },
      "serve": {
        "configurations": {
          "development": {
            "buildTarget": "react-swc:build:development",
          },
          "production": {
            "buildTarget": "react-swc:build:production",
            "hmr": false,
          },
        },
        "defaultConfiguration": "development",
        "executor": "@nx/webpack:dev-server",
        "options": {
          "buildTarget": "react-swc:build",
          "hmr": true,
        },
      },
      "storybook": {
        "configurations": {
          "ci": {
            "quiet": true,
          },
        },
        "executor": "@nx/storybook:storybook",
        "options": {
          "configDir": "apps/react-swc/.storybook",
          "port": 4400,
        },
      },
      "test": {
        "executor": "@nx/jest:jest",
        "options": {
          "jestConfig": "apps/react-swc/jest.config.ts",
          "passWithNoTests": true,
        },
        "outputs": [
          "{workspaceRoot}/coverage/{projectRoot}",
        ],
      },
    },
  },
  "react-swc-e2e" => {
    "$schema": "../../node_modules/nx/schemas/project-schema.json",
    "implicitDependencies": [
      "react-swc",
    ],
    "name": "react-swc-e2e",
    "projectType": "application",
    "root": "apps/react-swc-e2e",
    "sourceRoot": "apps/react-swc-e2e/src",
    "tags": [],
    "targets": {
      "e2e": {
        "configurations": {
          "production": {
            "devServerTarget": "react-swc:serve:production",
          },
        },
        "executor": "@nx/cypress:cypress",
        "options": {
          "cypressConfig": "apps/react-swc-e2e/cypress.config.ts",
          "devServerTarget": "react-swc:serve:development",
          "testingType": "e2e",
        },
      },
      "lint": {
        "executor": "@nx/linter:eslint",
        "options": {
          "lintFilePatterns": [
            "apps/react-swc-e2e/**/*.{js,ts}",
          ],
        },
        "outputs": [
          "{options.outputFile}",
        ],
      },
    },
  },
  "react-vite-e2e" => {
    "$schema": "../../node_modules/nx/schemas/project-schema.json",
    "implicitDependencies": [
      "react-vite",
    ],
    "name": "react-vite-e2e",
    "projectType": "application",
    "root": "apps/react-vite-e2e",
    "sourceRoot": "apps/react-vite-e2e/src",
    "tags": [],
    "targets": {
      "e2e": {
        "configurations": {
          "ci": {
            "devServerTarget": "react-vite:storybook:ci",
          },
        },
        "executor": "@nx/cypress:cypress",
        "options": {
          "cypressConfig": "apps/react-vite-e2e/cypress.config.ts",
          "devServerTarget": "react-vite:storybook",
          "testingType": "e2e",
        },
      },
      "lint": {
        "executor": "@nx/linter:eslint",
        "options": {
          "lintFilePatterns": [
            "apps/react-vite-e2e/**/*.{js,ts}",
          ],
        },
        "outputs": [
          "{options.outputFile}",
        ],
      },
    },
  },
  "reapp" => {
    "$schema": "../../node_modules/nx/schemas/project-schema.json",
    "name": "reapp",
    "projectType": "application",
    "root": "apps/reapp",
    "sourceRoot": "apps/reapp/src",
    "tags": [],
    "targets": {
      "build": {
        "configurations": {
          "development": {
            "mode": "development",
          },
          "production": {
            "mode": "production",
          },
        },
        "defaultConfiguration": "production",
        "executor": "@nx/vite:build",
        "options": {
          "configFile": "apps/reapp/vite.config.ts",
          "outputPath": "dist/apps/reapp",
        },
        "outputs": [
          "{options.outputPath}",
        ],
      },
      "build-storybook": {
        "configurations": {
          "ci": {
            "quiet": true,
          },
        },
        "executor": "@nx/storybook:build",
        "options": {
          "configDir": "apps/reapp/.storybook",
          "outputDir": "dist/storybook/reapp",
        },
        "outputs": [
          "{options.outputDir}",
        ],
      },
      "lint": {
        "executor": "@nx/linter:eslint",
        "options": {
          "lintFilePatterns": [
            "apps/reapp/**/*.{ts,tsx,js,jsx}",
          ],
        },
        "outputs": [
          "{options.outputFile}",
        ],
      },
      "serve": {
        "configurations": {
          "development": {
            "buildTarget": "reapp:build:development",
            "hmr": true,
          },
          "production": {
            "buildTarget": "reapp:build:production",
            "hmr": false,
          },
        },
        "defaultConfiguration": "development",
        "executor": "@nx/vite:dev-server",
        "options": {
          "buildTarget": "reapp:build",
        },
      },
      "storybook": {
        "configurations": {
          "ci": {
            "quiet": true,
          },
        },
        "executor": "@nx/storybook:storybook",
        "options": {
          "configDir": "apps/reapp/.storybook",
          "port": 4400,
        },
      },
      "test": {
        "executor": "@nx/vite:test",
        "options": {
          "passWithNoTests": true,
          "reportsDirectory": "../../coverage/apps/reapp",
        },
        "outputs": [
          "coverage/apps/reapp",
        ],
      },
    },
  },
  "reapp-e2e" => {
    "$schema": "../../node_modules/nx/schemas/project-schema.json",
    "implicitDependencies": [
      "reapp",
    ],
    "name": "reapp-e2e",
    "projectType": "application",
    "root": "apps/reapp-e2e",
    "sourceRoot": "apps/reapp-e2e/src",
    "tags": [],
    "targets": {
      "e2e": {
        "configurations": {
          "production": {
            "devServerTarget": "reapp:serve:production",
          },
        },
        "executor": "@nx/cypress:cypress",
        "options": {
          "cypressConfig": "apps/reapp-e2e/cypress.config.ts",
          "devServerTarget": "reapp:serve:development",
          "testingType": "e2e",
        },
      },
      "lint": {
        "executor": "@nx/linter:eslint",
        "options": {
          "lintFilePatterns": [
            "apps/reapp-e2e/**/*.{js,ts}",
          ],
        },
        "outputs": [
          "{options.outputFile}",
        ],
      },
    },
  },
  "reappw" => {
    "$schema": "../../node_modules/nx/schemas/project-schema.json",
    "name": "reappw",
    "projectType": "application",
    "root": "apps/reappw",
    "sourceRoot": "apps/reappw/src",
    "tags": [],
    "targets": {
      "build": {
        "configurations": {
          "development": {
            "extractLicenses": false,
            "optimization": false,
            "sourceMap": true,
            "vendorChunk": true,
          },
          "production": {
            "extractLicenses": true,
            "fileReplacements": [
              {
                "replace": "apps/reappw/src/environments/environment.ts",
                "with": "apps/reappw/src/environments/environment.prod.ts",
              },
            ],
            "namedChunks": false,
            "optimization": true,
            "outputHashing": "all",
            "sourceMap": false,
            "vendorChunk": false,
          },
        },
        "defaultConfiguration": "production",
        "executor": "@nx/webpack:webpack",
        "options": {
          "assets": [
            "apps/reappw/src/favicon.ico",
            "apps/reappw/src/assets",
          ],
          "baseHref": "/",
          "compiler": "babel",
          "index": "apps/reappw/src/index.html",
          "main": "apps/reappw/src/main.tsx",
          "outputPath": "dist/apps/reappw",
          "scripts": [],
          "styles": [
            "apps/reappw/src/styles.css",
          ],
          "tsConfig": "apps/reappw/tsconfig.app.json",
          "webpackConfig": "@nx/react/plugins/webpack",
        },
        "outputs": [
          "{options.outputPath}",
        ],
      },
      "build-storybook": {
        "configurations": {
          "ci": {
            "quiet": true,
          },
        },
        "executor": "@nx/storybook:build",
        "options": {
          "configDir": "apps/reappw/.storybook",
          "outputDir": "dist/storybook/reappw",
        },
        "outputs": [
          "{options.outputDir}",
        ],
      },
      "lint": {
        "executor": "@nx/linter:eslint",
        "options": {
          "lintFilePatterns": [
            "apps/reappw/**/*.{ts,tsx,js,jsx}",
          ],
        },
        "outputs": [
          "{options.outputFile}",
        ],
      },
      "serve": {
        "configurations": {
          "development": {
            "buildTarget": "reappw:build:development",
          },
          "production": {
            "buildTarget": "reappw:build:production",
            "hmr": false,
          },
        },
        "defaultConfiguration": "development",
        "executor": "@nx/webpack:dev-server",
        "options": {
          "buildTarget": "reappw:build",
          "hmr": true,
        },
      },
      "storybook": {
        "configurations": {
          "ci": {
            "quiet": true,
          },
        },
        "executor": "@nx/storybook:storybook",
        "options": {
          "configDir": "apps/reappw/.storybook",
          "port": 4400,
        },
      },
      "test": {
        "executor": "@nx/jest:jest",
        "options": {
          "jestConfig": "apps/reappw/jest.config.ts",
          "passWithNoTests": true,
        },
        "outputs": [
          "{workspaceRoot}/coverage/{projectRoot}",
        ],
      },
    },
  },
  "reappw-e2e" => {
    "$schema": "../../node_modules/nx/schemas/project-schema.json",
    "implicitDependencies": [
      "reappw",
    ],
    "name": "reappw-e2e",
    "projectType": "application",
    "root": "apps/reappw-e2e",
    "sourceRoot": "apps/reappw-e2e/src",
    "tags": [],
    "targets": {
      "e2e": {
        "configurations": {
          "production": {
            "devServerTarget": "reappw:serve:production",
          },
        },
        "executor": "@nx/cypress:cypress",
        "options": {
          "cypressConfig": "apps/reappw-e2e/cypress.config.ts",
          "devServerTarget": "reappw:serve:development",
          "testingType": "e2e",
        },
      },
      "lint": {
        "executor": "@nx/linter:eslint",
        "options": {
          "lintFilePatterns": [
            "apps/reappw-e2e/**/*.{js,ts}",
          ],
        },
        "outputs": [
          "{options.outputFile}",
        ],
      },
    },
  },
  "wv1" => {
    "$schema": "../../node_modules/nx/schemas/project-schema.json",
    "name": "wv1",
    "projectType": "application",
    "root": "apps/wv1",
    "sourceRoot": "apps/wv1/src",
    "tags": [],
    "targets": {
      "build": {
        "configurations": {
          "development": {
            "mode": "development",
          },
          "production": {
            "mode": "production",
          },
        },
        "defaultConfiguration": "production",
        "executor": "@nx/vite:build",
        "options": {
          "configFile": "apps/wv1/vite.config.custom.ts",
          "outputPath": "dist/apps/wv1",
        },
        "outputs": [
          "{options.outputPath}",
        ],
      },
      "build-storybook": {
        "configurations": {
          "ci": {
            "quiet": true,
          },
        },
        "executor": "@nx/storybook:build",
        "options": {
          "configDir": "apps/wv1/.storybook",
          "outputDir": "dist/storybook/wv1",
        },
        "outputs": [
          "{options.outputDir}",
        ],
      },
      "lint": {
        "executor": "@nx/linter:eslint",
        "options": {
          "lintFilePatterns": [
            "apps/wv1/**/*.ts",
          ],
        },
        "outputs": [
          "{options.outputFile}",
        ],
      },
      "serve": {
        "configurations": {
          "development": {
            "buildTarget": "wv1:build:development",
            "hmr": true,
          },
          "production": {
            "buildTarget": "wv1:build:production",
            "hmr": false,
          },
        },
        "defaultConfiguration": "development",
        "executor": "@nx/vite:dev-server",
        "options": {
          "buildTarget": "wv1:build",
        },
      },
      "storybook": {
        "configurations": {
          "ci": {
            "quiet": true,
          },
        },
        "executor": "@nx/storybook:storybook",
        "options": {
          "configDir": "apps/wv1/.storybook",
          "port": 4400,
        },
      },
      "test": {
        "executor": "@nx/jest:jest",
        "options": {
          "jestConfig": "apps/wv1/jest.config.ts",
          "passWithNoTests": true,
        },
        "outputs": [
          "{workspaceRoot}/coverage/{projectRoot}",
        ],
      },
    },
  },
  "wv1-e2e" => {
    "$schema": "../../node_modules/nx/schemas/project-schema.json",
    "implicitDependencies": [
      "wv1",
    ],
    "name": "wv1-e2e",
    "projectType": "application",
    "root": "apps/wv1-e2e",
    "sourceRoot": "apps/wv1-e2e/src",
    "tags": [],
    "targets": {
      "e2e": {
        "configurations": {
          "production": {
            "devServerTarget": "wv1:serve:production",
          },
        },
        "executor": "@nx/cypress:cypress",
        "options": {
          "cypressConfig": "apps/wv1-e2e/cypress.config.ts",
          "devServerTarget": "wv1:serve:development",
          "testingType": "e2e",
        },
      },
      "lint": {
        "executor": "@nx/linter:eslint",
        "options": {
          "lintFilePatterns": [
            "apps/wv1-e2e/**/*.{js,ts}",
          ],
        },
        "outputs": [
          "{options.outputFile}",
        ],
      },
    },
  },
  "ww1" => {
    "$schema": "../../node_modules/nx/schemas/project-schema.json",
    "name": "ww1",
    "projectType": "application",
    "root": "apps/ww1",
    "sourceRoot": "apps/ww1/src",
    "tags": [],
    "targets": {
      "build": {
        "configurations": {
          "production": {
            "extractLicenses": true,
            "fileReplacements": [
              {
                "replace": "apps/ww1/src/environments/environment.ts",
                "with": "apps/ww1/src/environments/environment.prod.ts",
              },
            ],
            "namedChunks": false,
            "optimization": true,
            "outputHashing": "all",
            "sourceMap": false,
            "vendorChunk": false,
          },
        },
        "defaultConfiguration": "production",
        "executor": "@nx/webpack:webpack",
        "options": {
          "assets": [
            "apps/ww1/src/favicon.ico",
            "apps/ww1/src/assets",
          ],
          "baseHref": "/",
          "compiler": "babel",
          "index": "apps/ww1/src/index.html",
          "main": "apps/ww1/src/main.ts",
          "outputPath": "dist/apps/ww1",
          "scripts": [],
          "styles": [
            "apps/ww1/src/styles.css",
          ],
          "tsConfig": "apps/ww1/tsconfig.app.json",
          "webpackConfig": "apps/ww1/webpack.config.js",
        },
        "outputs": [
          "{options.outputPath}",
        ],
      },
      "build-storybook": {
        "configurations": {
          "ci": {
            "quiet": true,
          },
        },
        "executor": "@nx/storybook:build",
        "options": {
          "configDir": "apps/ww1/.storybook",
          "outputDir": "dist/storybook/ww1",
        },
        "outputs": [
          "{options.outputDir}",
        ],
      },
      "lint": {
        "executor": "@nx/linter:eslint",
        "options": {
          "lintFilePatterns": [
            "apps/ww1/**/*.ts",
          ],
        },
        "outputs": [
          "{options.outputFile}",
        ],
      },
      "serve": {
        "configurations": {
          "production": {
            "buildTarget": "ww1:build:production",
          },
        },
        "executor": "@nx/webpack:dev-server",
        "options": {
          "buildTarget": "ww1:build",
        },
      },
      "storybook": {
        "configurations": {
          "ci": {
            "quiet": true,
          },
        },
        "executor": "@nx/storybook:storybook",
        "options": {
          "configDir": "apps/ww1/.storybook",
          "port": 4400,
        },
      },
      "test": {
        "executor": "@nx/jest:jest",
        "options": {
          "jestConfig": "apps/ww1/jest.config.ts",
          "passWithNoTests": true,
        },
        "outputs": [
          "{workspaceRoot}/coverage/{projectRoot}",
        ],
      },
    },
  },
  "ww1-e2e" => {
    "$schema": "../../node_modules/nx/schemas/project-schema.json",
    "implicitDependencies": [
      "ww1",
    ],
    "name": "ww1-e2e",
    "projectType": "application",
    "root": "apps/ww1-e2e",
    "sourceRoot": "apps/ww1-e2e/src",
    "tags": [],
    "targets": {
      "e2e": {
        "configurations": {
          "production": {
            "devServerTarget": "ww1:serve:production",
          },
        },
        "executor": "@nx/cypress:cypress",
        "options": {
          "cypressConfig": "apps/ww1-e2e/cypress.config.ts",
          "devServerTarget": "ww1:serve",
          "testingType": "e2e",
        },
      },
      "lint": {
        "executor": "@nx/linter:eslint",
        "options": {
          "lintFilePatterns": [
            "apps/ww1-e2e/**/*.{js,ts}",
          ],
        },
        "outputs": [
          "{options.outputFile}",
        ],
      },
    },
  },
  "my-plugin" => {
    "$schema": "../../node_modules/nx/schemas/project-schema.json",
    "name": "my-plugin",
    "projectType": "library",
    "root": "libs/my-plugin",
    "sourceRoot": "libs/my-plugin/src",
    "tags": [],
    "targets": {
      "build": {
        "executor": "@nx/js:tsc",
        "options": {
          "assets": [
            "libs/my-plugin/*.md",
            {
              "glob": "**/!(*.ts)",
              "input": "./libs/my-plugin/src",
              "output": "./src",
            },
            {
              "glob": "**/*.d.ts",
              "input": "./libs/my-plugin/src",
              "output": "./src",
            },
            {
              "glob": "generators.json",
              "input": "./libs/my-plugin",
              "output": ".",
            },
            {
              "glob": "executors.json",
              "input": "./libs/my-plugin",
              "output": ".",
            },
          ],
          "main": "libs/my-plugin/src/index.ts",
          "outputPath": "dist/libs/my-plugin",
          "tsConfig": "libs/my-plugin/tsconfig.lib.json",
        },
        "outputs": [
          "{options.outputPath}",
        ],
      },
      "lint": {
        "executor": "@nx/linter:eslint",
        "options": {
          "lintFilePatterns": [
            "libs/my-plugin/**/*.ts",
            "libs/my-plugin/generators.json",
            "libs/my-plugin/executors.json",
            "libs/my-plugin/package.json",
          ],
        },
        "outputs": [
          "{options.outputFile}",
        ],
      },
      "test": {
        "executor": "@nx/jest:jest",
        "options": {
          "jestConfig": "libs/my-plugin/jest.config.ts",
          "passWithNoTests": true,
        },
        "outputs": [
          "{workspaceRoot}/coverage/{projectRoot}",
        ],
      },
    },
  },
  "mylib" => {
    "$schema": "../../node_modules/nx/schemas/project-schema.json",
    "name": "mylib",
    "projectType": "library",
    "root": "libs/mylib",
    "sourceRoot": "libs/mylib/src",
    "tags": [],
    "targets": {
      "build": {
        "executor": "@imported-libs/my-plugin:build",
      },
    },
  },
  "nglib" => {
    "$schema": "../../node_modules/nx/schemas/project-schema.json",
    "name": "nglib",
    "prefix": "imported-libs",
    "projectType": "library",
    "root": "libs/nglib",
    "sourceRoot": "libs/nglib/src",
    "tags": [],
    "targets": {
      "build-storybook": {
        "configurations": {
          "ci": {
            "quiet": true,
          },
        },
        "executor": "@storybook/angular:build-storybook",
        "options": {
          "browserTarget": "nglib:build-storybook",
          "compodoc": false,
          "configDir": "libs/nglib/.storybook",
          "outputDir": "dist/storybook/nglib",
        },
        "outputs": [
          "{options.outputDir}",
        ],
      },
      "lint": {
        "executor": "@nx/linter:eslint",
        "options": {
          "lintFilePatterns": [
            "libs/nglib/**/*.ts",
            "libs/nglib/**/*.html",
          ],
        },
        "outputs": [
          "{options.outputFile}",
        ],
      },
      "storybook": {
        "configurations": {
          "ci": {
            "quiet": true,
          },
        },
        "executor": "@storybook/angular:start-storybook",
        "options": {
          "browserTarget": "nglib:build-storybook",
          "compodoc": false,
          "configDir": "libs/nglib/.storybook",
          "port": 4400,
        },
      },
      "test": {
        "executor": "@nx/jest:jest",
        "options": {
          "jestConfig": "libs/nglib/jest.config.ts",
          "passWithNoTests": true,
        },
        "outputs": [
          "{workspaceRoot}/coverage/{projectRoot}",
        ],
      },
    },
  },
  "react-rollup" => {
    "$schema": "../../node_modules/nx/schemas/project-schema.json",
    "name": "react-rollup",
    "projectType": "library",
    "root": "libs/react-rollup",
    "sourceRoot": "libs/react-rollup/src",
    "tags": [],
    "targets": {
      "build": {
        "executor": "@nx/rollup:rollup",
        "options": {
          "assets": [
            {
              "glob": "libs/react-rollup/README.md",
              "input": ".",
              "output": ".",
            },
          ],
          "compiler": "babel",
          "entryFile": "libs/react-rollup/src/index.ts",
          "external": [
            "react/jsx-runtime",
          ],
          "outputPath": "dist/libs/react-rollup",
          "project": "libs/react-rollup/package.json",
          "rollupConfig": "@nx/react/plugins/bundle-rollup",
          "tsConfig": "libs/react-rollup/tsconfig.lib.json",
        },
        "outputs": [
          "{options.outputPath}",
        ],
      },
      "build-storybook": {
        "configurations": {
          "ci": {
            "quiet": true,
          },
        },
        "executor": "@nx/storybook:build",
        "options": {
          "configDir": "libs/react-rollup/.storybook",
          "outputDir": "dist/storybook/react-rollup",
        },
        "outputs": [
          "{options.outputDir}",
        ],
      },
      "lint": {
        "executor": "@nx/linter:eslint",
        "options": {
          "lintFilePatterns": [
            "libs/react-rollup/**/*.{ts,tsx,js,jsx}",
          ],
        },
        "outputs": [
          "{options.outputFile}",
        ],
      },
      "storybook": {
        "configurations": {
          "ci": {
            "quiet": true,
          },
        },
        "executor": "@nx/storybook:storybook",
        "options": {
          "configDir": "libs/react-rollup/.storybook",
          "port": 4400,
        },
      },
      "test": {
        "executor": "@nx/jest:jest",
        "options": {
          "jestConfig": "libs/react-rollup/jest.config.ts",
          "passWithNoTests": true,
        },
        "outputs": [
          "{workspaceRoot}/coverage/{projectRoot}",
        ],
      },
    },
  },
  "react-rollup-2" => {
    "$schema": "../../node_modules/nx/schemas/project-schema.json",
    "name": "react-rollup-2",
    "projectType": "library",
    "root": "libs/react-rollup-2",
    "sourceRoot": "libs/react-rollup-2/src",
    "tags": [],
    "targets": {
      "build": {
        "executor": "@nx/rollup:rollup",
        "options": {
          "assets": [
            {
              "glob": "libs/react-rollup-2/README.md",
              "input": ".",
              "output": ".",
            },
          ],
          "compiler": "babel",
          "entryFile": "libs/react-rollup-2/src/index.ts",
          "external": [
            "react/jsx-runtime",
          ],
          "outputPath": "dist/libs/react-rollup-2",
          "project": "libs/react-rollup-2/package.json",
          "rollupConfig": "@nx/react/plugins/bundle-rollup",
          "tsConfig": "libs/react-rollup-2/tsconfig.lib.json",
        },
        "outputs": [
          "{options.outputPath}",
        ],
      },
      "lint": {
        "executor": "@nx/linter:eslint",
        "options": {
          "lintFilePatterns": [
            "libs/react-rollup-2/**/*.{ts,tsx,js,jsx}",
          ],
        },
        "outputs": [
          "{options.outputFile}",
        ],
      },
      "test": {
        "executor": "@nx/jest:jest",
        "options": {
          "jestConfig": "libs/react-rollup-2/jest.config.ts",
          "passWithNoTests": true,
        },
        "outputs": [
          "{workspaceRoot}/coverage/{projectRoot}",
        ],
      },
    },
  },
  "react-vite" => {
    "$schema": "../../node_modules/nx/schemas/project-schema.json",
    "name": "react-vite",
    "projectType": "library",
    "root": "libs/react-vite",
    "sourceRoot": "libs/react-vite/src",
    "tags": [],
    "targets": {
      "build": {
        "configurations": {
          "development": {
            "mode": "development",
          },
          "production": {
            "mode": "production",
          },
        },
        "defaultConfiguration": "production",
        "executor": "@nx/vite:build",
        "options": {
          "outputPath": "dist/libs/react-vite",
        },
        "outputs": [
          "{options.outputPath}",
        ],
      },
      "build-storybook": {
        "configurations": {
          "ci": {
            "quiet": true,
          },
        },
        "executor": "@nx/storybook:build",
        "options": {
          "configDir": "libs/react-vite/.storybook",
          "outputDir": "dist/storybook/react-vite",
        },
        "outputs": [
          "{options.outputDir}",
        ],
      },
      "lint": {
        "executor": "@nx/linter:eslint",
        "options": {
          "lintFilePatterns": [
            "libs/react-vite/**/*.{ts,tsx,js,jsx}",
          ],
        },
        "outputs": [
          "{options.outputFile}",
        ],
      },
      "storybook": {
        "configurations": {
          "ci": {
            "quiet": true,
          },
        },
        "executor": "@nx/storybook:storybook",
        "options": {
          "configDir": "libs/react-vite/.storybook",
          "port": 4400,
        },
      },
      "test": {
        "executor": "@nx/vite:test",
        "options": {
          "passWithNoTests": true,
          "reportsDirectory": "../../coverage/libs/react-vite",
        },
        "outputs": [
          "coverage/libs/react-vite",
        ],
      },
    },
  },
  "react-vite-2" => {
    "$schema": "../../node_modules/nx/schemas/project-schema.json",
    "name": "react-vite-2",
    "projectType": "library",
    "root": "libs/react-vite-2",
    "sourceRoot": "libs/react-vite-2/src",
    "tags": [],
    "targets": {
      "build": {
        "configurations": {
          "development": {
            "mode": "development",
          },
          "production": {
            "mode": "production",
          },
        },
        "defaultConfiguration": "production",
        "executor": "@nx/vite:build",
        "options": {
          "outputPath": "dist/libs/react-vite-2",
        },
        "outputs": [
          "{options.outputPath}",
        ],
      },
      "lint": {
        "executor": "@nx/linter:eslint",
        "options": {
          "lintFilePatterns": [
            "libs/react-vite-2/**/*.{ts,tsx,js,jsx}",
          ],
        },
        "outputs": [
          "{options.outputFile}",
        ],
      },
      "test": {
        "executor": "@nx/vite:test",
        "options": {
          "passWithNoTests": true,
          "reportsDirectory": "../../coverage/libs/react-vite-2",
        },
        "outputs": [
          "coverage/libs/react-vite-2",
        ],
      },
    },
  },
  "utils-one" => {
    "$schema": "../../../node_modules/nx/schemas/project-schema.json",
    "name": "utils-one",
    "projectType": "library",
    "root": "libs/utils/one",
    "sourceRoot": "libs/utils/one/src",
    "tags": [],
    "targets": {
      "build": {
        "executor": "@nx/webpack:webpack",
        "options": {
          "assets": [],
          "main": "libs/utils/one/src/index.ts",
          "outputPath": "dist/libs/utils/one",
          "tsConfig": "libs/utils/one/tsconfig.lib.json",
        },
        "outputs": [
          "{options.outputPath}",
        ],
      },
      "lint": {
        "executor": "@nx/linter:eslint",
        "options": {
          "lintFilePatterns": [
            "libs/utils/one/**/*.ts",
          ],
        },
        "outputs": [
          "{options.outputFile}",
        ],
      },
      "test": {
        "executor": "@nx/jest:jest",
        "options": {
          "jestConfig": "libs/utils/one/jest.config.ts",
          "passWithNoTests": true,
        },
        "outputs": [
          "{workspaceRoot}/coverage/{projectRoot}",
        ],
      },
    },
  },
  "utils-three-vite" => {
    "$schema": "../../../node_modules/nx/schemas/project-schema.json",
    "name": "utils-three-vite",
    "projectType": "library",
    "root": "libs/utils/three-vite",
    "sourceRoot": "libs/utils/three-vite/src",
    "tags": [],
    "targets": {
      "build": {
        "executor": "@nx/vite:build",
        "options": {
          "outputPath": "dist/libs/utils/three-vite",
        },
        "outputs": [
          "{options.outputPath}",
        ],
      },
      "lint": {
        "executor": "@nx/linter:eslint",
        "options": {
          "lintFilePatterns": [
            "libs/utils/three-vite/**/*.ts",
          ],
        },
        "outputs": [
          "{options.outputFile}",
        ],
      },
      "test": {
        "executor": "@nx/jest:jest",
        "options": {
          "jestConfig": "libs/utils/three-vite/jest.config.ts",
          "passWithNoTests": true,
        },
        "outputs": [
          "{workspaceRoot}/coverage/{projectRoot}",
        ],
      },
    },
  },
  "utils-two" => {
    "$schema": "../../../node_modules/nx/schemas/project-schema.json",
    "name": "utils-two",
    "projectType": "library",
    "root": "libs/utils/two",
    "sourceRoot": "libs/utils/two/src",
    "tags": [],
    "targets": {
      "build": {
        "executor": "@nx/webpack:webpack",
        "options": {
          "assets": [],
          "main": "libs/utils/two/src/index.ts",
          "outputPath": "dist/libs/utils/two",
          "tsConfig": "libs/utils/two/tsconfig.lib.json",
        },
        "outputs": [
          "{options.outputPath}",
        ],
      },
      "lint": {
        "executor": "@nx/linter:eslint",
        "options": {
          "lintFilePatterns": [
            "libs/utils/two/**/*.ts",
          ],
        },
        "outputs": [
          "{options.outputFile}",
        ],
      },
      "test": {
        "executor": "@nx/jest:jest",
        "options": {
          "jestConfig": "libs/utils/two/jest.config.ts",
          "passWithNoTests": true,
        },
        "outputs": [
          "{workspaceRoot}/coverage/{projectRoot}",
        ],
      },
    },
  },
}
`;
